# litepcie_test

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  GEMINI.md  LICENSE  README.md  axau15.bit  build2.py  mutagen-sync.yml  pyproject.toml
.claude/: settings.json  settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
scripts/: mutagen_sync.py  mutagen_sync_v2.py  run-remote.sh
src/litepcie_test/: GEMINI.md  __init__.py  axau15_soc.py  custom_usppciephy.py  sqrl_soc.py  utils.py  xem8320_soc.py
src/litepcie_test/handy_tests/: .gitignore  MACOS_DRIVERKIT_RECOMMENDATIONS.md
src/litepcie_test/handy_tests/.claude/: settings.local.json
src/litepcie_test/handy_tests/macos_driverkit_sample/: LitePCIeDriver.cpp  LitePCIeDriver.h
src/litepcie_test/handy_tests/ubuntu/: CMakeLists.txt  DMA_LATENCY_TESTS.md  DMA_TEST_ARCHITECTURE.md  LATENCY_MEASUREMENT.md  LITEPCIE_DMA_TEST_GUIDE.md  LITEPCIE_KERNEL_MODULE_GUIDE.md  Makefile  README_OPTIMIZED_DMA.md  benchmark.sh  build.sh  compare_performance.py  litepcie_dma_latency_simple.c  litepcie_dma_latency_test.c  litepcie_dma_test_optimized.c  litepcie_dma_test_optimized_v2.c  litepcie_latency_kernel.c  litepcie_latency_test.c  run_tests.sh  test_optimized_dma.sh
src/litepcie_test/handy_tests/ubuntu/.claude/: settings.local.json
src/litepcie_test/handy_tests/ubuntu/kernel/: KERNEL_IOCTL_GUIDE.md  Makefile  README_KERNEL.md  csr.h  init.sh  litepcie.h  litepcie_latency.c  litepcie_latency.h  main.c  main_latency_patch.diff  mem.h  soc.h
src/litepcie_test/handy_tests/ubuntu/user/: Makefile  litepcie_latency_test.c  litepcie_latency_test_final.c  litepcie_latency_test_simple.c
src/litepcie_test/handy_tests/ubuntu/user/liblitepcie/: litepcie_dma.c
src/litepcie_test/litex_platform_boards/: axau15.py  sqrl_acorn.py  xem8320.py
tests/: test_basic.py
